test/corpus/sequence-then-choice.txt
=======================================
Sequence of two elements or one element
=======================================
choice ::= elem1 elem2 | elem3

---

(grammar
  (rule
    (name
      (symbol))
    (body
      (alternation
        (sequence
            (rule_ref
              (symbol))
            (rule_ref
              (symbol)))
        (rule_ref
          (symbol)))
    )))
