test/corpus/sequence.txt
============================
Concatentation of 3 elements
============================
choice ::= elem1 elem2 elem3

---

(grammar
  (rule
    (name
      (symbol))
    (body
      (sequence
        (sequence
          (rule_ref
            (symbol))
          (rule_ref
            (symbol)))
        (rule_ref
          (symbol)))
    )))


